--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,7 @@
         {{ post.published_date }}
     </div>
     <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-    <p>{{ post.text|linebreaksbr }}</p>
+    <p>{{ post.text|truncatechars:200|linebreaksbr }}</p>
 </div>
 {% endfor %}
 {% endblock content %}
